<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_help"
    app:startDestination="@+id/showHelp">

    <fragment
        android:id="@+id/showHelp"
        android:name="com.kg.gettransfer.presentation.ui.SupportFragment"
        android:label="support"
        tools:layout="@layout/fragment_support">

        <action
            android:id="@+id/go_to_about"
            app:destination="@+id/showAboutUs"/>
    </fragment>

    <fragment
        android:id="@+id/showAboutUs"
        android:name="com.kg.gettransfer.presentation.ui.AboutFragment"
        android:label="aboutUs"
        tools:layout="@layout/fragment_about">
    </fragment>
</navigation>
