...
        android:layout_below="@+id/searchForm"
        android:layout_marginStart="@dimen/search_fragment_separator_horizontal_margin"
        android:layout_marginEnd="@dimen/search_fragment_separator_horizontal_margin"
        android:background="@color/colorDividerGray" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_addressList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rv_popularList"
        android:layout_below="@+id/separator"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingTop="@dimen/search_fragment_rv_padding"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

...
