...
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        app:layout_constraintBottom_toTopOf="@+id/btn_continue"
        android:paddingStart="@dimen/become_a_carrier_elements_horizontal_margin"
        android:paddingEnd="@dimen/become_a_carrier_elements_horizontal_margin"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_driver_logo_rounded" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/sf_font_semi_bold_16_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/become_a_carrier_title_vertical_margins"
            android:layout_marginBottom="@dimen/become_a_carrier_title_vertical_margins"
            android:gravity="center_horizontal"
...
